--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
-                <h2>Cairo</h2>
+                <h2>islam</h2>
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>aswan</h2>
+                <h2>mohamed</h2>
             </div>
         </div>
     </div>
