add soha shady to the heading

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
-                <h2>fathy</h2>
+                <h2>soha</h2>
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>nassar</h2>
+                <h2>shady</h2>
             </div>
         </div>
     </div>
